kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  type: ClusterIP
  selector:
    app: ${APPLICATION_NAME}
  ports:
  - port: 80
