kubernetes/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  type: ClusterIP
  selector:
    app: ${APPLICATION_NAME}
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  # Name of the ingress, named after the application
  name: ${APPLICATION_NAME}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ${CERTIFICATE_DOMAIN}
    # Name of the secret, i.e. the certificates
    secretName: ${APPLICATION_NAME}
  rules:
  - host: ${CERTIFICATE_DOMAIN}
    http:
      paths:
      - path: /
        backend:
          # Name of the service, named after the app
          serviceName: ${APPLICATION_NAME}
          servicePort: 80
